syntax = "proto3";

package events.v1;

option go_package = "auth-service/internal/proto";

// User registration event message
message UserRegistrationEvent {
  // Unique user identifier
  string user_id = 1;
  
  // User email address
  string email = 2;
  
  // User role (PATIENT, DOCTOR, PHARMACIST, etc.)
  string role = 3;
  
  // Optional user first name
  string first_name = 4;
  
  // Optional user last name
  string last_name = 5;
  
  // Event timestamp (Unix timestamp in seconds)
  int64 timestamp = 6;

  // user phone number
  string phone_number = 7;
  
  // Event type identifier
  string event_type = 8;
  
  // Optional clinic information (for CLINIC_ADMIN users)
  ClinicData clinic_data = 9;
}

// Clinic data for clinic admin registration
message ClinicData {
  // Clinic ID from profile service (for updates)
  int64 clinic_id = 1;
  
  // Clinic name
  string name = 2;
  
  // Physical address
  string physical_address = 3;
  
  // Contact phone
  string contact_phone = 4;
  
  // Operating hours
  string operating_hours = 5;
}

// Clinic created event message (published by profile service)
message ClinicCreatedEvent {
  // Clinic ID generated by profile service
  int64 clinic_id = 1;
  
  // Admin user ID from auth service
  string admin_user_id = 2;
  
  // Clinic name
  string name = 3;
  
  // Physical address
  string physical_address = 4;
  
  // Contact phone
  string contact_phone = 5;
  
  // Operating hours
  string operating_hours = 6;
  
  // Event timestamp
  int64 timestamp = 7;
  
  // Event type identifier
  string event_type = 8;
}

// Clinic update event message
message ClinicUpdateEvent {
  // Profile service clinic ID
  int64 clinic_id = 1;
  
  // Updated clinic name
  string name = 2;
  
  // Updated physical address
  string address = 3;
  
  // Updated contact phone
  string contact_phone = 4;
  
  // Updated operating hours
  string operating_hours = 5;
  
  // Whether the clinic is active
  bool is_active = 6;
  
  // Event timestamp
  int64 timestamp = 7;
  
  // Event type identifier
  string event_type = 8;
}

// Response message for user registration events
message UserRegistrationEventResponse {
  // Whether the event was processed successfully
  bool success = 1;
  
  // Optional message with details
  string message = 2;
  
  // Error code if processing failed
  string error_code = 3;
}